# dj-on

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cookiecutter.json  main.py  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  Makefile  app.Dockerfile  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/src/base/: api.py  models.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: project_version.py  settings.py  urls.py
{{cookiecutter.project_slug}}/tests/functional/: conftest.py  test_healthcheck.py
