[project]
name = "my_django_project"
version = "0.1.0"
description = "A Django project"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
requires-python = ">=3.13"
dependencies = [
    "daphne>=4.1.2",
    "django>=5.2",
    "django-environ>=0.12.0",
    "django-ninja>=1.3.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.9.0",
    "dramatiq[redis]>=1.17.0",
    "django-dramatiq>=0.11.6",
    "django-jazzmin>=3.0.1",
]

[build-system]
requires = ["uv_build>=0.6.0,<0.7.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "toml-cli>=0.8.2",
]
